Cleaned up the code and added an admin panel, that displays movies, basePrice, duration etc. If you buy a ticket for an event now, you will get info how many rows + seats are in the hall!